force-app/main/default/objects/MyObVenue__c/MyObVenue__c.object-meta.xml
<CustomObject>
    <label>MyOb Venue</label>
    <nameField>
        <displayFormat>MyOb-{000000}</displayFormat>
        <label>MyOb Venue</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MyOb Venues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>