force-app/main/default/objects/MyObVenue__c/fields/AssignmentFlag__c.field-meta.xml
<CustomField>
    <fullName>AssignmentFlag__c</fullName>
    <formula>(
ISBLANK(Account__r.Venue__c)
||
AssignmentSort__c &gt; Account__r.Venue__r.AssignmentSort__c
)</formula>
    <label>Assignment Flag</label>
    <type>Checkbox</type>
</CustomField>