force-app/main/default/objects/MyObVenue__c/fields/AssignmentSort__c.field-meta.xml
<CustomField>
    <fullName>AssignmentSort__c</fullName>
    <formula>IF( Inactive__c || ISBLANK( MyOrderbirdId__c ) ,0, 

IF(ISBLANK(Days_Since_Last_Shift_Open__c), 
(CreatedDate - DATETIMEVALUE( &quot;1970-01-01 00:00:00&quot; )),
1000000 + IF (Days_Since_Last_Shift_Open__c = 0, 1000001, 1000000/Days_Since_Last_Shift_Open__c))
)</formula>
    <label>Assignment Sort</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>