force-app/main/default/objects/MyObVenue__c/fields/Average_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Average_Revenue__c</fullName>
    <label>Average Revenue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>By Invoice</fullName>
                <default>true</default>
                <label>By Invoice</label>
            </value>
            <value>
                <fullName>By Guest</fullName>
            </value>
            <value>
                <fullName>All</fullName>
                <isActive>false</isActive>
                <label>All</label>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>