force-app/main/default/objects/MyObVenue__c/fields/BadInsightsEmail__c.field-meta.xml
<CustomField>
    <fullName>BadInsightsEmail__c</fullName>
    <formula>InsightsEmail__c &lt;&gt;  Account__r.SF_BillTo_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insights Email Issue</label>
    <type>Checkbox</type>
</CustomField>