force-app/main/default/objects/MyObVenue__c/fields/BamboraId__c.field-meta.xml
<CustomField>
    <fullName>BamboraId__c</fullName>
    <label>Bambora Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>