force-app/main/default/objects/MyObVenue__c/fields/BB_Onboarding_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>BB_Onboarding_Start_Date__c</fullName>
    <description>Stakeholder Pay/MINI https://jira.orderbird.com/browse/CDS-3107</description>
    <inlineHelpText>When has the BB onboarding mail been send?</inlineHelpText>
    <label>BB Onboarding Start Date</label>
    <type>Date</type>
</CustomField>