force-app/main/default/objects/MyObVenue__c/fields/BB_Registration_Link__c.field-meta.xml
<CustomField>
    <fullName>BB_Registration_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://boarding.bambora.com/?id=&quot; &amp;  BamboraId__c, &quot;Click here&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BB Registration Link</label>
    <type>Text</type>
</CustomField>