force-app/main/default/objects/MyObVenue__c/fields/BD_API_TEST_DATETIME__c.field-meta.xml
<CustomField>
    <fullName>BD_API_TEST_DATETIME__c</fullName>
    <label>BD API TEST datetime</label>
    <type>DateTime</type>
</CustomField>