force-app/main/default/objects/MyObVenue__c/fields/BD_API_TEST_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>BD_API_TEST_NUMBER__c</fullName>
    <label>BD API TEST NUMBER</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>