force-app/main/default/objects/MyObVenue__c/fields/BD_API_TEST_TEXT__c.field-meta.xml
<CustomField>
    <fullName>BD_API_TEST_TEXT__c</fullName>
    <description>test field for bd api update TEXT field 255 char.</description>
    <label>BD API TEST TEXT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>