force-app/main/default/objects/MyObVenue__c/fields/Black_Spot__c.field-meta.xml
<CustomField>
    <fullName>Black_Spot__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Something Max made, better not ask...
Delete if there is no Max around anymore...</description>
    <inlineHelpText>He is dead, Jim!</inlineHelpText>
    <label>Black Spot</label>
    <type>Checkbox</type>
</CustomField>