force-app/main/default/objects/MyObVenue__c/fields/CanRefreshBambora__c.field-meta.xml
<CustomField>
    <fullName>CanRefreshBambora__c</fullName>
    <formula>NOT(ISBLANK(MyOrderbirdId__c))
&amp;&amp;
Account__r.Target_Product__c == &quot;MINI&quot;
&amp;&amp;
TEXT(Account__r.Pay_Status__c) != &quot;Onboarding Completed&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Can Fetch Bambora Reg Id</label>
    <type>Checkbox</type>
</CustomField>