force-app/main/default/objects/MyObVenue__c/fields/Cashbook_Autosubbed__c.field-meta.xml
<CustomField>
    <fullName>Cashbook_Autosubbed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cashbook Autosubbed</label>
    <type>Checkbox</type>
</CustomField>