force-app/main/default/objects/MyObVenue__c/fields/Cashbook_License_Date__c.field-meta.xml
<CustomField>
    <fullName>Cashbook_License_Date__c</fullName>
    <label>Cashbook License Date</label>
    <type>Date</type>
</CustomField>