force-app/main/default/objects/MyObVenue__c/fields/ChurnPrediction__c.field-meta.xml
<CustomField>
    <fullName>ChurnPrediction__c</fullName>
    <label>Churn Prediction</label>
    <precision>18</precision>
    <scale>17</scale>
    <type>Number</type>
</CustomField>