force-app/main/default/objects/MyObVenue__c/fields/Days_Since_Last_Shift_Open__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Shift_Open__c</fullName>
    <formula>if(isblank(LastOpenShiftTimestamp__c),null,
today() - datevalue( LastOpenShiftTimestamp__c ))</formula>
    <label>Days Since Last Shift Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>