force-app/main/default/objects/MyObVenue__c/fields/Days_since_Onboarding_start__c.field-meta.xml
<CustomField>
    <fullName>Days_since_Onboarding_start__c</fullName>
    <formula>TODAY() -  BB_Onboarding_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since Onboarding start</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>