force-app/main/default/objects/MyObVenue__c/fields/Email_Index__c.field-meta.xml
<CustomField>
    <fullName>Email_Index__c</fullName>
    <displayFormat>EM{000000}</displayFormat>
    <label>Email Index</label>
    <type>AutoNumber</type>
</CustomField>