force-app/main/default/objects/MyObVenue__c/fields/Food_Drinks_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Food_Drinks_Ratio__c</fullName>
    <label>Food-Drinks Ratio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>By Revenue</fullName>
                <default>true</default>
                <label>By Revenue</label>
            </value>
            <value>
                <fullName>By Sold Items</fullName>
            </value>
            <value>
                <fullName>All</fullName>
                <isActive>false</isActive>
                <label>All</label>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>