force-app/main/default/objects/MyObVenue__c/fields/HasToken__c.field-meta.xml
<CustomField>
    <fullName>HasToken__c</fullName>
    <formula>NOT(ISBLANK(Token__c))</formula>
    <label>Has Token</label>
    <type>Checkbox</type>
</CustomField>