force-app/main/default/objects/MyObVenue__c/fields/Hourly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Revenue__c</fullName>
    <label>Hourly Revenue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>By Ordering</fullName>
            </value>
            <value>
                <fullName>By Invoice Time</fullName>
            </value>
            <value>
                <fullName>All</fullName>
                <isActive>false</isActive>
                <label>All</label>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>