force-app/main/default/objects/MyObVenue__c/fields/IBAN__c.field-meta.xml
<CustomField>
    <fullName>IBAN__c</fullName>
    <label>MYob IBAN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>