force-app/main/default/objects/MyObVenue__c/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://jira.orderbird.com/browse/CRMT-3557</description>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>