force-app/main/default/objects/MyObVenue__c/fields/InsightsEligible__c.field-meta.xml
<CustomField>
    <fullName>InsightsEligible__c</fullName>
    <formula>ISBLANK(InsightsEmail__c)
 &amp;&amp;
Account__r.Target_Product__c = &quot;MINI&quot;
 &amp;&amp;
ISBLANK(Account__r.Dunning_0_Date__c)
 &amp;&amp;
(
  CONTAINS(Channel__c, &quot;Food&quot;) 
   || 
  CONTAINS(Channel__c, &quot;Cafe&quot;) 
   || 
  CONTAINS(Channel__c, &quot;Drinks&quot;) 
   || 
  CONTAINS(Channel__c, &quot;Big Night Out&quot;)
)
 &amp;&amp;
(
  TEXT(Account__r.Account_Status__c) = &quot;Active Customer&quot;
   ||
  TEXT(Account__r.Account_Status__c) = &quot;Future Customer&quot;
)
 &amp;&amp;
(
  ISBLANK(TEXT(Account__r.PrimaryLanguage__c))
   ||
  TEXT(Account__r.PrimaryLanguage__c) = &quot;German&quot;
   ||
  TEXT(Account__r.PrimaryLanguage__c) = &quot;English&quot;
)</formula>
    <label>Insights Eligible</label>
    <type>Checkbox</type>
</CustomField>