force-app/main/default/objects/MyObVenue__c/fields/InsightsEmail__c.field-meta.xml
<CustomField>
    <fullName>InsightsEmail__c</fullName>
    <label>Insights Email</label>
    <type>Email</type>
</CustomField>