force-app/main/default/objects/MyObVenue__c/fields/InsightsResubbed__c.field-meta.xml
<CustomField>
    <fullName>InsightsResubbed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insights Resubscribed</label>
    <type>Checkbox</type>
</CustomField>