force-app/main/default/objects/MyObVenue__c/fields/InsightsUnsubbed__c.field-meta.xml
<CustomField>
    <fullName>InsightsUnsubbed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insights Unsubscribed</label>
    <type>Checkbox</type>
</CustomField>