force-app/main/default/objects/MyObVenue__c/fields/InsightsVersion__c.field-meta.xml
<CustomField>
    <fullName>InsightsVersion__c</fullName>
    <defaultValue>&quot;2&quot;</defaultValue>
    <label>Insights Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>