force-app/main/default/objects/MyObVenue__c/fields/Last_Bank_Detail_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Last_Bank_Detail_Reminder__c</fullName>
    <label>Last Bank Detail Reminder</label>
    <type>Date</type>
</CustomField>