force-app/main/default/objects/MyObVenue__c/fields/Last_Invoice_Created_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Last_Invoice_Created_Timestamp__c</fullName>
    <label>Last Invoice Created Timestamp</label>
    <type>DateTime</type>
</CustomField>