force-app/main/default/objects/MyObVenue__c/fields/Last_Shift_Closed_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Last_Shift_Closed_Timestamp__c</fullName>
    <label>Last Shift Closed Timestamp</label>
    <type>DateTime</type>
</CustomField>