force-app/main/default/objects/MyObVenue__c/fields/LastOpenShiftTimestamp__c.field-meta.xml
<CustomField>
    <fullName>LastOpenShiftTimestamp__c</fullName>
    <label>Last Open Shift Timestamp</label>
    <type>DateTime</type>
</CustomField>