force-app/main/default/objects/MyObVenue__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created only for Customers that buy a MINI in Shopify</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>MyOb Venues</relationshipLabel>
    <relationshipName>MyOb_Venues</relationshipName>
    <type>Lookup</type>
</CustomField>