force-app/main/default/objects/MyObVenue__c/fields/Login__c.field-meta.xml
<CustomField>
    <fullName>Login__c</fullName>
    <externalId>true</externalId>
    <label>MyOrderbird Login</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>