force-app/main/default/objects/MyObVenue__c/fields/MINI_AutoSubbed__c.field-meta.xml
<CustomField>
    <fullName>MINI_AutoSubbed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MINI Auto-subscribed</label>
    <type>Checkbox</type>
</CustomField>