force-app/main/default/objects/MyObVenue__c/fields/MiniSerialNumber__c.field-meta.xml
<CustomField>
    <fullName>MiniSerialNumber__c</fullName>
    <description>https://jira.orderbird.com/browse/CRMT-4204</description>
    <label>MINI Device Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>