force-app/main/default/objects/MyObVenue__c/fields/my_ob_ID_as_number__c.field-meta.xml
<CustomField>
    <fullName>my_ob_ID_as_number__c</fullName>
    <formula>VALUE( MyOrderbirdId__c )</formula>
    <label>my.ob ID (as number)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>