force-app/main/default/objects/MyObVenue__c/fields/MyOrderbirdId__c.field-meta.xml
<CustomField>
    <fullName>MyOrderbirdId__c</fullName>
    <externalId>true</externalId>
    <label>MyOrderbird Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>