force-app/main/default/objects/MyObVenue__c/fields/Onboarding_Cashback__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Cashback__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://jira.orderbird.com/browse/CDS-3107</description>
    <inlineHelpText>Has this Venue received cashback?</inlineHelpText>
    <label>Onboarding Cashback</label>
    <type>Checkbox</type>
</CustomField>