force-app/main/default/objects/MyObVenue__c/fields/Pre_Existing_Sign_up__c.field-meta.xml
<CustomField>
    <fullName>Pre_Existing_Sign_up__c</fullName>
    <formula>CreatedDate &lt; Account__r.CreatedDate</formula>
    <label>Pre-Existing Sign-up</label>
    <type>Checkbox</type>
</CustomField>