force-app/main/default/objects/MyObVenue__c/fields/Target_Product__c.field-meta.xml
<CustomField>
    <fullName>Target_Product__c</fullName>
    <formula>Account__r.Target_Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Product</label>
    <type>Text</type>
</CustomField>