force-app/main/default/objects/MyObVenue__c/fields/TSE_Charges__c.field-meta.xml
<CustomField>
    <fullName>TSE_Charges__c</fullName>
    <label>TSE Charge(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>