force-app/main/default/objects/MyObVenue__c/fields/TSE_Revoke__c.field-meta.xml
<CustomField>
    <fullName>TSE_Revoke__c</fullName>
    <label>TSE Revoke</label>
    <type>DateTime</type>
</CustomField>