force-app/main/default/objects/MyObVenue__c/fields/Uncertainty__c.field-meta.xml
<CustomField>
    <fullName>Uncertainty__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field displays how uncertain we are that this connection is valid.

0 = created by link OR created by BI with all parameters matching
1 = created by BI with one parameter not matching
2 = created by BI with two parameters not matching
9 = created by BI and subsequently confirmed by the customer</description>
    <label>Uncertainty</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>