force-app/main/default/objects/MyObVenue__c/fields/Wizard_Complete__c.field-meta.xml
<CustomField>
    <fullName>Wizard_Complete__c</fullName>
    <label>Wizard Complete</label>
    <type>DateTime</type>
</CustomField>