force-app/main/default/objects/MyObVenue__c/validationRules/FiscalizeAPI_2.validationRule-meta.xml
<ValidationRule>
    <fullName>FiscalizeAPI_2</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( ISNEW() )
 &amp;&amp;
ISCHANGED( Wizard_Complete__c ) 
 &amp;&amp;
NOT( ISBLANK( Wizard_Complete__c ))
 &amp;&amp;
TEXT(Account__r.BillingCountryCode) != &quot;DE&quot;
 &amp;&amp;
TEXT(Account__r.ShippingCountryCode) != &quot;DE&quot;
 &amp;&amp;
Account__r.VenueCountryCode__c  != &quot;DE&quot;</errorConditionFormula>
    <errorMessage>%%{&quot;errorCode&quot;:&quot;2&quot;,&quot;errorMessage&quot;:&quot;This customer is not in Germany.&quot;}%%</errorMessage>
</ValidationRule>