force-app/main/default/objects/MyObVenue__c/validationRules/FiscalizeAPI_3.validationRule-meta.xml
<ValidationRule>
    <fullName>FiscalizeAPI_3</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( ISNEW() )
 &amp;&amp;
ISCHANGED( Wizard_Complete__c ) 
 &amp;&amp;
NOT( ISBLANK( Wizard_Complete__c ))
 &amp;&amp;
NOT( ISBLANK( Account__r.Dunning_1_Date__c ))</errorConditionFormula>
    <errorMessage>%%{&quot;errorCode&quot;:&quot;3&quot;,&quot;errorMessage&quot;:&quot;This customer is in the debt collection process.&quot;}%%</errorMessage>
</ValidationRule>