force-app/main/default/objects/MyObVenue__c/validationRules/FiscalizeAPI_4.validationRule-meta.xml
<ValidationRule>
    <fullName>FiscalizeAPI_4</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( ISNEW() )
 &amp;&amp;
ISCHANGED( Wizard_Complete__c ) 
 &amp;&amp;
NOT( ISBLANK( Wizard_Complete__c ))
 &amp;&amp;
TEXT( Account__r.Account_Status__c ) != &quot;Active Customer&quot;
 &amp;&amp;
TEXT( Account__r.Account_Status__c ) != &quot;Paused Customer&quot;
 &amp;&amp;
TEXT( Account__r.Account_Status__c ) != &quot;Future Customer&quot;
 &amp;&amp;
(Account__r.Target_Product__c != &quot;MINI&quot; || TEXT( Account__r.Account_Status__c ) = &quot;Lost Customer&quot;)</errorConditionFormula>
    <errorMessage>%%{&quot;errorCode&quot;:&quot;4&quot;,&quot;errorMessage&quot;:&quot;Customer is not active.&quot;}%%</errorMessage>
</ValidationRule>