force-app/main/default/objects/MyObVenue__c/validationRules/Link_Hiding_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Link_Hiding_Restriction</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Hidden__c) 
&amp;&amp; $Profile.Name  &lt;&gt; &quot;System Administrator&quot;
&amp;&amp; $Profile.Name  &lt;&gt; &quot;Account Specialist&quot; 
&amp;&amp; $UserRole.Name &lt;&gt; &quot;Support Management&quot;</errorConditionFormula>
    <errorMessage>You do not have permission to change this connection&apos;s activation status.</errorMessage>
</ValidationRule>