force-app/main/default/objects/MyObVenue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>MyOrderbirdId__c</columns>
    <columns>my_ob_ID_as_number__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>HasToken__c</columns>
    <columns>Email__c</columns>
    <columns>Black_Spot__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Age__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>