force-app/main/default/objects/MyObVenue__c/listViews/Search_for_specific_Email.listView-meta.xml
<ListView>
    <fullName>Search_for_specific_Email</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>MyOrderbirdId__c</columns>
    <columns>my_ob_ID_as_number__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>HasToken__c</columns>
    <columns>Email__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Login__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Login__c</field>
        <operation>contains</operation>
        <value>quentin.turf+mini@orderbird.com</value>
    </filters>
    <label>Search for specific Email</label>
</ListView>