force-app/main/default/objects/MyObVenue__c/listViews/Unmatched.listView-meta.xml
<ListView>
    <fullName>Unmatched</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Email__c</columns>
    <columns>MyOrderbirdId__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact__c</field>
        <operation>equals</operation>
        <value>MyOrderbird Registrant</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>Unmatched (Recent)</label>
</ListView>